ganti nama kwkwk

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="container">
           <div class="text-tutup">
             <p>Wedding Of</p>
-            <h1>Rama & Egi</h1>
+            <h1>Fani & JONGKOK</h1>
             <h2>Kepada:</h2>
             <h2 id="nama_tamu"></h2>
             <a class="buka">Buka Undangan</a>
@@ -59,7 +59,7 @@
           <!-- info -->
           <div class="info">
             <p>The Wedding Of</p>
-            <h1>Rama & Egi</h1>
+            <h1>Fani & JONGKOK</h1>
             <h2>WE INVITE YOU TO CELEBRATE OUR WEDDING</h2>
           </div>
         </div>
@@ -468,3 +468,4 @@
     </script>
   </body>
 </html>
+
