ganti nama 2x wkkww

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     />
     <!-- AOS -->
 
-    <title>Rama & Egi</title>
+    <title>Fani & wowo</title>
   </head>
   <body>
     <!-- tutup overlay -->
@@ -36,7 +36,7 @@
       <div class="container">
           <div class="text-tutup">
             <p>Wedding Of</p>
-            <h1>Fani & JONGKOK</h1>
+            <h1>Fani & wowo</h1>
             <h2>Kepada:</h2>
             <h2 id="nama_tamu"></h2>
             <a class="buka">Buka Undangan</a>
@@ -51,15 +51,13 @@
           <!-- slider -->
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="img/1.jpg" alt="" /></div>
-              <div class="swiper-slide"><img src="img/3.jpg" alt="" /></div>
-              <div class="swiper-slide"><img src="img/4.jpg" alt="" /></div>
+              <div class="swiper-slide"><img src="img/IMG_20260105_214112.jpg" alt="" /></div>
             </div>
           </div>
           <!-- info -->
           <div class="info">
             <p>The Wedding Of</p>
-            <h1>Fani & JONGKOK</h1>
+            <h1>Fani & Wowo</h1>
             <h2>WE INVITE YOU TO CELEBRATE OUR WEDDING</h2>
           </div>
         </div>
@@ -79,7 +77,7 @@
             </div>
             <div class="waktu">
               <div class="simply-countdown"></div>
-              <p class="tanggal">Sabtu, 5 Juli 2025</p>
+              <p class="tanggal">Sabtu, 5 Juli 2026</p>
             </div>
           </div>
 
@@ -111,12 +109,12 @@
                       <div class="box_cowo">
                           <img src="img/bingkai.png" alt="" class="border_img">
                       <div class="box_img">
-                          <img src="img/cowo.jpg" alt="cowo">
+                          <img src="img/IMG_20260105_214112.jpg" alt="cowo">
                       </div>
                       </div>
                       <div class="pengenal">
-                      <h2>Rama Muhamad Azizi, S.Kom </h2>
-                      <p>Anak Pertama Dari</p>
+                      <h2>Refani dwi  </h2>
+                      <p>Anak kedua Dari</p>
                       <p>Bapak Ayip Prayitno, S.IP & Ibu Nani Yuningsih, S.T</p>
                       </div>
                   </div>
@@ -126,14 +124,14 @@
                     <!-- perempuan -->
                     <div class="cewe">
                       <div class="box_cewe">
-                          <img src="img/bingkai.png" alt="" class="border_img">
+                          <img src="img" alt="" class="border_img">
                       <div class="box_img">
                           <img src="img/cewe.jpg" alt="cowo">
                       </div>
                       </div>
                       <div class="pengenal">
-                      <h2>Azita Egilia</h2>
-                      <p>Anak Kedua Dari</p>
+                      <h2>Wowo surowo</h2>
+                      <p>Anak pertama Dari</p>
                       <p>Bapak Azhari & Ibu Adde Muharni</p>
                       </div>
                   </div>
@@ -244,35 +242,9 @@
           </div>
 
           <div class="img_top">
-            <img src="img/7.jpg" alt="">
+            <img src="img/IMG_20260105_214112.jpg" alt="">
           </div>
 
-          <div class="kumpulan-foto">
-            <div>
-              <a href="img/2.jpg" data-lightbox="2.jpg" data-title="Our Moment"><img src="img/2.jpg" alt="galeri"></a>
-            </div>
-            <div>
-              <a href="img/5.jpg" data-lightbox="5.jpg" data-title="Our Moment"><img src="img/5.jpg" alt="galeri"></a>
-            </div>
-            <div>
-              <a href="img/6.jpg" data-lightbox="6.jpg" data-title="Our Moment"><img src="img/6.jpg" alt="galeri"></a>
-            </div>
-            <div>
-              <a href="img/8.jpg" data-lightbox="8.jpg" data-title="Our Moment"><img src="img/8.jpg" alt="galeri"></a>
-            </div>
-            <div>
-              <a href="img/9.jpg" data-lightbox="9.jpg" data-title="Our Moment"><img src="img/9.jpg" alt="galeri"></a>
-            </div>
-
-            <div>
-              <a href="img/10.jpg" data-lightbox="10.jpg" data-title="Our Moment"><img src="img/10.jpg" alt="galeri"></a>
-            </div>
-            <div>
-              <a href="img/11.jpg" data-lightbox="11.jpg" data-title="Our Moment"><img src="img/11.jpg" alt="galeri"></a>
-            </div>
-            <div>
-             <a href="img/12.jpg" data-lightbox="12.jpg" data-title="Our Moment"><img src="img/12.jpg" alt="galeri"></a>
-            </div>
           </div>
 
           <ul class="bunga">
@@ -297,7 +269,7 @@
     <!-- RSVP -->
     <section id="rsvp">
       <div class="container">
-        <div class="box-rsvp">
+        div class="box-rsvp">
           <div class="heading-title">
             <p>Konfirmasi Kehadiran</p>
             <div class="box_title">
@@ -359,8 +331,7 @@
               </div>
 
               <div class="info_gift">
-                <p><span class="text_salin">7264191429</span><br>
-                  a.n. Rama Muhamad Azizi</p>
+                <p><span class="text_salin">123444</span><br</p>
 
                 <button class="salin">
                   <i class="far fa-copy"></i>
@@ -373,8 +344,7 @@
               </div>
 
               <div class="info_gift">
-                <p><span class="text_salin">7244359617</span><br>
-                  a.n. Azita Egilia</p>
+                <p><span class="text_salin">727272</span><br></p>
 
                 <button class="salin">
                   <i class="far fa-copy"></i>
@@ -396,7 +366,7 @@
 
           <p>Kami Yang Berbahagia, <br>
             Keluarga Besar Kedua Mempelai</p>
-            <h2 id="nama_pengantin">Rama & Egi</h2>
+            <h2 id="nama_pengantin">Fani & Wowo</h2>
         </div>
       </div>
      </section>
@@ -468,4 +438,5 @@
     </script>
   </body>
 </html>
+
 
