--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                       </div>
                       </div>
                       <div class="pengenal">
-                      <h2>Refani dwi  </h2>
+                      <h2>Rifani dwi hasanah </h2>
                       <p>Anak kedua Dari</p>
                       <p>Bapak Ayip Prayitno, S.IP & Ibu Nani Yuningsih, S.T</p>
                       </div>
@@ -438,5 +438,6 @@
     </script>
   </body>
 </html>
+
 
 
