Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                       <div class="box_cewe">
                           <img src="img" alt="" class="border_img">
                       <div class="box_img">
-                          <img src="img/cewe.jpg" alt="cowo">
+                          <img src="img/" alt="cowo">
                       </div>
                       </div>
                       <div class="pengenal">
@@ -438,6 +438,7 @@
     </script>
   </body>
 </html>
+
 
 
 
